--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -1,11 +1,17 @@
 .service-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
 }
-p {
-  color: blue;
+
+/* make it responsive  */
+@media only screen and (max-width: 688px) {
+  .service-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
-p::before {
-  content: "I love you";
+@media only screen and (min-width: 689px) and (max-width: 991px) {
+  .service-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
